fix(ui): Overlapping buttons at narrow screen widths (#5259)
* fix(ui): Prevent overlap of toolbar items with narrow browser windows. Other narrow window related fixes

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -5,16 +5,20 @@
 }
 
 .application-status-panel {
-    font-size: .875em;
+    font-size: 0.875em;
     color: $argo-color-gray-6;
     background-color: white;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
+    @media screen and (max-width: map-get($breakpoints, large)) {
+        flex-wrap: nowrap;
+        overflow-x: scroll;
+    }
 
     &__item {
         height: 75px;
         margin: 10px 0;
         padding: 5px 20px;
-        font-size: .8em;
+        font-size: 0.8em;
         line-height: 1.2;
         color: $argo-color-gray-5;
 
@@ -37,6 +41,14 @@
                 color: $argo-success-color;
             }
         }
+
+        @media screen and (max-width: map-get($breakpoints, xlarge)) {
+            flex: auto;
+            flex-grow: 1;
+            flex-shrink: 0;
+            max-width: 100%;
+            width: auto;
+        }
     }
 
     &__item-value {
@@ -51,11 +63,13 @@
             color: $argo-color-teal-6;
         }
 
-        &--Running a, &--Terminating a {
+        &--Running a,
+        &--Terminating a {
             color: $argo-running-color;
         }
 
-        &--Error a, &--Failed a {
+        &--Error a,
+        &--Failed a {
             color: $argo-failed-color;
         }
 
@@ -64,7 +78,7 @@
         }
 
         i {
-            font-size: .6em;
+            font-size: 0.6em;
         }
     }
 
@@ -74,7 +88,8 @@
             top: -2px;
         }
     }
-    &__item-name, &__item-value {
+    &__item-name,
+    &__item-value {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
